--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@material-tailwind/react": "^1.4.2",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
