--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
+    "@coreui/react": "^4.6.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-tailwind/react": "^1.4.2",
@@ -12,13 +13,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "classnames": "^2.3.2",
     "framer-motion": "^10.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "react-particles": "^2.9.3",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
