--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
+    "firebase": "^9.17.1",
     "framer-motion": "^10.0.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles": "^2.9.3",
     "react-router-dom": "^6.8.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.9.3",
     "sass": "^1.58.3",
-    "tsparticles": "^2.6.0",
     "styled-components": "^5.3.6",
+    "tsparticles": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
