--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-particles": "^2.9.3",
     "react-router-dom": "^6.8.2",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.9.3",
     "sass": "^1.58.3",
