--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
     "firebase": "^9.17.1",
-    "framer-motion": "^10.0.1",
+    "framer-motion": "^10.0.2",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +25,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
+    "react-social-icons": "^5.15.0",
+    "react-tilt": "^0.1.4",
     "react-tsparticles": "^2.9.3",
     "sass": "^1.58.3",
     "styled-components": "^5.3.6",
