--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-particles": "^2.9.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-tsparticles": "^2.9.3",
+    "redux": "4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
