--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.17.1",
     "framer-motion": "^10.0.1",
     "hamburger-react": "^2.5.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
