--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-social-icons": "^5.15.0",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^2.9.3",
+    "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
