--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
     "react-tilt": "^0.1.4",
-    "react-slick": "^0.29.0",
     "react-tsparticles": "^2.9.3",
+    "react-vertical-timeline-component": "^3.6.0",
     "redux": "4.1.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
