--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.8.0",
     "react-particles": "^2.9.3",
     "react-redux": "^8.0.5",
