--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.0",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
     "react-tilt": "^0.1.4",
