--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux": "4.1.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
+    "rsuite": "^5.28.2",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
