feat: configure payment gateway api

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hamburger-react": "^2.5.0",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
@@ -77,5 +78,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.2.7"
+  },
+  "browser": {
+    "crypto": false
   }
 }
