--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.17.1",
     "framer-motion": "^10.0.2",
     "hamburger-react": "^2.5.0",
@@ -46,8 +48,10 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
     "sass": "^1.58.3",
+    "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
     "tsparticles": "^2.6.0",
     "web-vitals": "^2.1.4"
