--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "airtable": "^0.11.6",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
     "framer-motion": "^10.0.2",
     "hamburger-react": "^2.5.0",
